--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -1,100 +1,20 @@
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .products-wrapper{
   height: 100vh;
   width: auto;
   margin: auto;
-  margin-top: 4rem;
+  margin-top: 5rem;
   margin-left: 18rem;
 }
-/* Products*/
-/* 
-
 .products-wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
-
-.card {
-    background-color: var(--color-white);
-    height: 280px;
-    width: 14rem;
-    display: flex;
-    flex-direction: column;
-    margin: 4rem;
-  }
-  
-  .card-image {
-    position: relative;
-    width: 100%;
-    height: 200px;
-  }
-  .card-image img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
-  .card-badge {
-    margin-top: 1rem;
-    background-color: var(--color-primary-100);
-    color: var(--color-black);
-    position: absolute;
-    left: 0rem;
-    top: 0.5rem;
-    padding: 0.1rem 0.4rem;
-  }
-  
-  /*card content*/
-  /*
-  .card-info {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .card-title {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  
-    padding: 0.5rem;
-  }
-  
-  .card-title i {
-    margin-top: -1rem;
-    color: var(--color-primary);
-  }
-  
-  .card-price {
-    display: flex;
-    justify-content: flex-start;
-    gap: 0.4rem;
-    padding-left: 0.6rem;
-  }
-  
-  .card-price .og-price {
-    text-decoration: line-through;
-    color: var(--color-grey);
-  }
-  .card-price .disc-percent {
-    color: var(--color-success);
-  }
-  .card button {
-    border: none;
-    background-color: var(--black);
-    color: var(--white); 
-    margin: 0.2rem 0.4rem;
-    margin-bottom: 0.6rem;
-    padding: 0.5rem 1rem;
-  }
-  
-
-@media (max-width: 800px){
-  .filter-wrapper{
-    width: 16rem;
-  }
-  .products-wrapper{
-    margin-left: 16rem; 
-  }
-}
-*/
