--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url("./styles/root.css");
 
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin:0;
+}
+
 .mockman{
     display: flex;
 }
