--- a/src/components/new-arrival/new-arrival.css
+++ b/src/components/new-arrival/new-arrival.css
@@ -3,14 +3,10 @@
     margin: auto;
     margin-top: 2rem;
     width: 90%;
-    display: flex;
-    justify-content: space-between;
-    /*used margin auto on content div*/
-    align-items: center;
 }
 
 .new-arrival-image{
-    width: 30%; 
+    position: relative; 
 }
 
 .new-arrival-image img{
@@ -19,32 +15,28 @@
 }
 
 .new-arrival-content{
-    margin: 0 auto;
+    position: absolute;
+    padding: 1rem;
+    top: 3rem;
+    color: #feffff;
 }
 
 .new-arrival-btn{
     display: inline-block;
-    border: 0.5px solid var(--color-primary);
-    color: var(--color-primary);
+    border: 0.5px solid var(--color-black);
+    color: white;
     margin-top: 4%;
     padding: 2% 10%;
+    font-weight: 700;
     /*experimental - % will be removed/replaced later*/
 }
 
 .new-arrival-content a:hover{
-    border-color: var(--color-black);
+    transform: translateY(-2px);
 }
 
-@media screen and (max-width: 620px) {
-    /* NewArrival.jsx */
+@media screen and (max-width: 650px) {
     .new-arrival-card{
-        flex-direction: column;
+        width: 100%;
     }
-    .new-arrival-image{
-        width: 50%;
-    }
-    .new-arrival-content{
-        width: 60%;
-        text-align: center;
-    }  
 }
