--- a/src/components/cart/cart-product.css
+++ b/src/components/cart/cart-product.css
@@ -1,47 +1,52 @@
-.cart-card{
-    width: 700px;
-    height: 390px;
+.cart-products-container{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+.cart-card{
+    max-width: 32rem;
+    min-height: 250px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
-.cart-card{
-    margin: auto;
-    margin-top: 5rem;/*navbar has 70px height*/
-    margin-left: 4rem;
-    margin-bottom: 1rem;
-}
+
 
 .cart-card-image{
     width: 40%;
-    height: 100%;
+    
 }
 .cart-card-image img{
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 .cart-card-content{
-    width: 50%;
-    margin: auto;
+    width: 60%;
+    padding: 0 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    /* justify-content: flex-start;
+    align-items: flex-start; */
 }
 
 .cart-card-heading{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 0rem;
+    padding: 1rem 1rem;
+
 }
 
-.card-price{
+.cart-card-price{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    gap: 0.4rem;
+    gap: 0.6rem;
+    padding: 0 1rem;
 }
 .disc-price,
 .disc-percent{
@@ -60,7 +65,7 @@
     color: var(--black);
 }
 
-.card-quantity-div span,i,input{
+.card-quantity-div span,.card-quantity-div i,.card-quantity-div input{
     display: block;
 }
 
@@ -69,18 +74,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 0.4rem;
+    gap: 0.6rem;
+    padding: 0 1rem;
+    padding-bottom: 1rem;
 }
 .card-quantity-div span{
     margin-right: auto;
 }
 
-.cart-card-content button{
+.cart-card-btn{
     background-color: var(--black);
     color: var(--white);
-    width: 70%;
-    padding: 0.5rem 2rem;
-    margin-top: 1rem;
+    width: 100%;
+    margin-left: 0;
 }
 /*Turn off number input spinner*/
 input[type=number]::-webkit-inner-spin-button, 
@@ -90,39 +96,27 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 
-/* Checkout */
 
-.checkout{
-    position: fixed;
-    right: 5vw;
-    top: 1rem;
-}
-.checkout{
-    margin-left: 1rem;
-    margin-top: 5rem;
-    border: 1px solid var(--black);
-    background-color: var(--color-blue);
-    width: 480px;
-    height: 440px;
-    padding: 1.2rem;
+@media screen and (max-width: 620px) {
+
+    html{
+        font-size: 13px;
+    }
+    /* height: 250px;  - image*/
+    
+
+    
 }
 
-.checkout-flex-row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+@media screen and (max-width: 450px) {
 
-.checkout-total{
-    font-weight: 700;
-}
+    html{
+        font-size: 10px;
+    }
 
-.checkout span{
-    font-weight: 700;
-}
-.checkout-btn{
-    width: 100%;
-    padding: 0.5rem 2rem;
-    background-color: var(--black);
-    color: var(--white);
+    .cart-card{
+        background-color: aquamarine;
+    }
+    
+    
 }
